<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:textColor="@color/text_primary">

    <!-- Ikona -->
    <ImageView
        android:id="@+id/ivParkingIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_parking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Naslov -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rezervirajte parking"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/ivParkingIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Lokacija -->
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Lokacija"
        android:inputType="text"
        android:padding="14dp"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Registracija -->
    <EditText
        android:id="@+id/etPlate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Upišite registraciju"
        android:inputType="text"
        android:padding="14dp"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/etLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Vrijeme -->
    <EditText
        android:id="@+id/etTime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Vrijeme (min)"
        android:inputType="number"
        android:padding="14dp"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/etPlate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Gumb traži parking -->
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Traži parking"
        android:backgroundTint="#0288D1"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/etTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Rezultat -->
    <TextView
        android:id="@+id/tvParkingResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Rezultat pretrage će se prikazati ovdje."
        android:textColor="#0288D1"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Gumb rezerviraj -->
    <Button
        android:id="@+id/btnReserve"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Rezerviraj"
        android:backgroundTint="#0288D1"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvParkingResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/nav_host_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E1F5FE"
            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            app:menu="@menu/bottom_nav_menu"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
